customer register and auth

--- a/templates/exportimport/login.html
+++ b/templates/exportimport/login.html
@@ -97,6 +97,16 @@
                     Sign In
                 </button>
             </form>
+
+            <!-- Registration Link -->
+            <div class="mt-6 text-center">
+                <p class="text-sm text-gray-600">
+                    Don't have an account? 
+                    <a href="{% url 'customer_register' %}" class="text-black font-medium hover:underline">
+                        Register here
+                    </a>
+                </p>
+            </div>
         </div>
 
         <!-- Footer -->
