--- a/templates/exportimport/base.html
+++ b/templates/exportimport/base.html
@@ -447,6 +447,12 @@
                 </svg>
                 Scanner
             </a>
+            <a href="{% url 'pending_parcels' %}" class="nav-item {% if request.resolver_match.url_name == 'pending_parcels' %}active{% endif %}">
+                <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                </svg>
+                Pending Parcels
+            </a>
             <a href="{% url 'all_shipments' %}" class="nav-item {% if request.resolver_match.url_name == 'all_shipments' %}active{% endif %}">
                 <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2"></path>
